metadata-classic/objects/RoutingProfile__c.object
<CustomObject>
    <description>Custom object that stores exceptional data for smart routing purposes (e.g., Top Pro goes to the front of the phone queue).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account this routing profile is based off of.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Routing Profiles</relationshipLabel>
        <relationshipName>RoutingProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the caller will be blocked from calling Thumbtack.</description>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact object.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Routing Profiles</relationshipLabel>
        <relationshipName>RoutingProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditFisher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Fisher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The Email address of this Pro/Customer.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Enrollment</description>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Routing Profiles</relationshipLabel>
        <relationshipName>Routing_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enterprise Sales</description>
        <label>Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For experimental routing</description>
        <label>Experiment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrequentCaller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frequent Caller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSyncedWithDataPlatform__c</fullName>
        <label>LastSyncedWithDataPlatform</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Routing Profiles</relationshipLabel>
        <relationshipName>RoutingProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpenIncident__c</fullName>
        <description>Formula field - linked to Account__r.MIOpenIncident__c  - if that&apos;s true, then this is true.</description>
        <formula>Account__r.MIOpenIncident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone10__c</fullName>
        <label>Phone10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProAssistOnboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Match Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoutetoAgent__c</fullName>
        <description>Email of the Agent to which the Account/Contact/Lead needs to be routed to</description>
        <label>Route to Agent</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Route to Sales</description>
        <inlineHelpText>Check to Route to Sales</inlineHelpText>
        <label>Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThumbtackID__c</fullName>
        <description>The Thumbtack User ID of the pro/customer.</description>
        <externalId>true</externalId>
        <label>Thumbtack ID</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TopPro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unprofitable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unprofitable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version number used for this routing profile record. Allows multiple types of routing campaigns to be run simultaneously, to aid switchovers.</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>user_pk_id__c</fullName>
        <description>User PK ID</description>
        <externalId>true</externalId>
        <label>user_pk_id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Routing Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TopPro__c</columns>
        <columns>Experiment__c</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>ThumbtackID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BlockedANI</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Phone2__c</columns>
        <columns>Phone3__c</columns>
        <columns>Phone4__c</columns>
        <columns>Phone5__c</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Blocked__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Blocked ANIs</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerContactRouting</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>TopPro__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Customer Contact Routing</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EnterpriseRoutingAccounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ThumbtackID__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone2__c</columns>
        <columns>Phone3__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enterprise__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Enterprise Routing Accounts</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProAssistantRouting</fullName>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>TopPro__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Pro Assistant Routing</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QuotingServiceRouting</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>TopPro__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Quoting Service Routing</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TopProRouting</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>TopPro__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TopPro__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top Pro Routing</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>XRoutingProfileByThumbtackID</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone2__c</columns>
        <columns>Phone3__c</columns>
        <columns>CreditFisher__c</columns>
        <columns>Enterprise__c</columns>
        <columns>Experiment__c</columns>
        <columns>FrequentCaller__c</columns>
        <columns>TopPro__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ThumbtackID__c</field>
            <operation>equals</operation>
            <value>19974845</value>
        </filters>
        <label>X - Routing profile by Thumback ID</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Routing Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Profiles</pluralLabel>
    <recordTypes>
        <fullName>SmartRouting</fullName>
        <active>true</active>
        <label>Smart Routing</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>